<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#000000">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:gravity="end|bottom"
        android:hint="0"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:textColor="#000000"
        android:textSize="60sp" />

    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_7"
                style="@style/ButtonStyle"
                android:text="@string/btn_7" />
            <Button
                android:id="@+id/btn_8"
                style="@style/ButtonStyle"
                android:text="@string/btn_8" />
            <Button
                android:id="@+id/btn_9"
                style="@style/ButtonStyle"
                android:text="@string/btn_9" />
            <Button
                android:id="@+id/btn_plus"
                style="@style/ButtonStyle"
                android:text="@string/btn_plus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_4"
                style="@style/ButtonStyle"
                android:text="@string/btn_4" />
            <Button
                android:id="@+id/btn_5"
                style="@style/ButtonStyle"
                android:text="@string/btn_5" />
            <Button
                android:id="@+id/btn_6"
                style="@style/ButtonStyle"
                android:text="@string/btn_6" />
            <Button
                android:id="@+id/btn_minus"
                style="@style/ButtonStyle"
                android:text="@string/btn_minus"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_1"
                style="@style/ButtonStyle"
                android:text="@string/btn_1" />
            <Button
                android:id="@+id/btn_2"
                style="@style/ButtonStyle"
                android:text="@string/btn_2" />
            <Button
                android:id="@+id/btn_3"
                style="@style/ButtonStyle"
                android:text="@string/btn_3" />
            <Button
                android:id="@+id/btn_multiply"
                style="@style/ButtonStyle"
                android:text="@string/btn_multiply"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_point"
                style="@style/ButtonStyle"
                android:text="@string/btn_point" />
            <Button
                android:id="@+id/btn_0"
                style="@style/ButtonStyle"
                android:text="@string/btn_0" />
            <Button
                android:id="@+id/btn_equal"
                style="@style/ButtonEqualStyle"
                android:text="@string/btn_equal" />
            <Button
                android:id="@+id/btn_divide"
                style="@style/ButtonStyle"
                android:text="@string/btn_divide"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_AC"
                style="@style/ButtonStyle"
                android:layout_width="372dp"
                android:text="@string/btn_AC" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>